--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+  <!-- header-part -->
+ <header>  
+   < id="container" class="container">
+      <div class="header">
+        <div class="header-image"><img src="images/banner/banner2.png" 
+             alt="Header-banner"></div>
+        <div class="header-text">
+          <h2 class="header-title">All Thinks Are 
+            Possible If You 
+            believe</h2>
+          <p class="header-description">
+            There are many variations of passages of Lorem Ipsum 
+            available, but the majority have suffered alteration in some 
+            form, by injected humour, or randomised words
+          </p> 
+          <button class="primary-button">Contact us</button>   
+        </div>  
+         
+      </div>
+ </header> 
+ <!-- middle part -->
+ <main>
   
+ </main>
+ <footer>
+
+ </footer>
 </body>
 </html>
