--- a/index.html
+++ b/index.html
@@ -90,11 +90,43 @@
         </div>
       </div>
  </section>
+ <!-- gradient image -->
  <section>
-
+  <div id='show_bg'>
+      <p class="watch-text">Always keep a positive Mindset</p>
+      <button class="call-button">Call me</button>
+  </div>
  </section>
  </main>
+ <!-- footer -->
  <footer>
+  <section class="contact">
+    <div>
+      <h2 class="contact-title">Future</h2>
+      <p class="contact-description">There are many variations of passages of 
+          Lorem Ipsum 
+        available, but the majority have suffered alteration in some 
+        form, by injected humour, or randomised word</p>
+        <p>Email : info@gmail.co</p>
+        <p>Phone : 01500 00 00 0</p>
+        <a href="">
+          <img src="images/icons/fb.png" alt="">
+        </a>
+        <a href="">
+          <img src="images/icons/twitter.png" alt="">
+        </a>
+        <a href="">
+          <img src="images/icons/youtube.png" alt="">
+        </a>
+    </div>
+        <div class="contact-info">
+          <p class="text-style">Subscribe</p>
+          <input class="enter-mail" type="Email" placeholder="Enter your Email" >
+          <button class="sub-button" type="Sub-button">Subscribe</button>
+        </div>
+       
+     
+  </section>
 
  </footer>
 </body>
