--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
   <!-- header-part -->
  <header>  
-   
+   <div>
+    <img class="header-banner" src="images/banner/banner2.png" alt="Banner">
+   </div>
+   <div>
+    <h1 class="header-title">All Thinks Are Possible If You believe</h1>
+       <p class="header-description">There are many variations of passages of 
+        Lorem Ipsum available, but the 
+        majority have suffered alteration in some form, by injected humour, or 
+         randomised words     
+       </p>
+    <div>
+      <button class="contact-button">Contact us</button>
+    </div>
+   </div>
  </header> 
  <!-- main content-part -->
 
