--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New-year-new-me</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <script src="https://kit.fontawesome.com/a6c6230546.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- header-part -->
@@ -14,14 +15,16 @@
     <img class="header-banner" src="images/banner/banner2.png" alt="Banner">
    </div>
    <div>
-    <h1 class="header-title">All Thinks Are Possible If You believe</h1>
+       <h1 class="header-title">All Thinks Are Possible If You believe</h1>
        <p class="header-description">There are many variations of passages of 
         Lorem Ipsum available, but the 
         majority have suffered alteration in some form, by injected humour, or 
          randomised words     
        </p>
     <div>
-      <button class="contact-button">Contact us</button>
+        <button  class="contact-button"><i class="fa-solid fa-phone"></i> 
+          Contact 
+         us</button>
     </div>
    </div>
  </header> 
@@ -30,7 +33,28 @@
 
 
  <main>
- 
+ <section class="body-part">
+  <div class="person-image">
+  <img src="images/person.png" alt="person-image">
+  </div>
+  <div>
+    <h1 class="body-title">My failures of previous year</h1>
+    <p class="body-description">Contrary to popular belief, Lorem Ipsum is not 
+      simply random text. It has roots in a piece of classical Latin 
+       literature from 45 BC, making it over 2000 years old. Richard 
+        McClintock.</p>
+  </div> 
+      <div class="body-text-point">   
+        <p> <i class="fa-solid fa-check"></i>Contrary to popular belief, is 
+          not simply.</p>
+        <p> <i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
+        <p> <i class="fa-solid fa-check"></i>Contrary to popular , is not 
+          simply.</p>
+        <p> <i class="fa-solid fa-check"></i>Contrary to popular belief, is 
+           not simply.</p>
+        <p> <i class="fa-solid fa-check"></i>Contrary to popular simply.</p>
+      </div> 
+ </section>
  <!-- own plan section -->
  <section class="my-plan">
     <div class="plan">
