--- a/index.html
+++ b/index.html
@@ -87,30 +87,24 @@
       </div>
  </section>
  <!-- gradient image -->
- 
+ <section>
+  <div class="watch">
+    <img src="images/watch.png" alt="watch">
+  </div>
+  <div class="gradient-image">
+    <img src="images/gradient2.png" alt="gradient-color">
+  </div>
+  <div >
+    <p class="watch-title">Awlays keep a positive mindset</p>
+  </div>
+  <div>
+    <button class="watch-button">Call now</button>
+  </div>
+ </section>
  </main>
  <!-- foodter -->
  <footer>
-  <section class="contact">
-    <div>
-      <h2 class="contact-title">Future</h2>
-      <p class="contact-description">There are many variations of passages of 
-          Lorem Ipsum 
-        available, but the majority have suffered alteration in some 
-        form, by injected humour, or randomised word</p>
-        <p>Email : info@gmail.co</p>
-        <p>Phone : 01500 00 00 0</p>
-        <a href="">
-          <img src="images/icons/fb.png" alt="">
-        </a>
-        <a href="">
-          <img src="images/icons/twitter.png" alt="">
-        </a>
-        <a href="">
-          <img src="images/icons/youtube.png" alt="">
-        </a>
-    </div>
-   
+  
      
   </section>
 
