--- a/index.html
+++ b/index.html
@@ -104,10 +104,34 @@
  </main>
  <!-- foodter -->
  <footer>
-  
-     
-  </section>
+  <section class="contact">
+    <div>
+      <h3 class="section-title">Future</h3>
+      <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+      <p class="mail">Email : info@gmail.com</p>
+      <p class="number">Phone : 01500 00 00 00</p>
+      <a href="">
+        <img src="images/icons/fb.png" alt="" class="src">
+      </a>
+      <a href="">
+        <img src="images/icons/twitter.png" alt="" class="src">
+      </a>
+      <a href="">
+        <img src="images/icons/youtube.png" alt="" class="src">
+      </a>
+    </div>
+    <div>
+      <h3 class="subs-title">Subscribe</h3>
+      <form action="">
+       <input type="Email" id="subs-mail" placeholder="Enter Your Email">
+       <div class="btn">
+        <input class="subs-button" type="button" value="Subscribe">
+      </div>
+      </form>
+    </div>
 
+   </section>
+   
  </footer>
 </body>
 </html>
